--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
+    "select2": "^4.0.3",
+    "select2-bootstrap-theme": "0.1.0-beta.10",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
