--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A Vue.js json form rendering engine",
   "author": "tawanda",
-  "main":"index.js",
+  "main": "index.js",
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
@@ -14,6 +14,7 @@
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "jquery.easing": "^1.4.1",
     "select2": "^4.0.3",
     "select2-bootstrap-theme": "0.1.0-beta.10",
     "vue": "^2.2.6",
